# hydro-solver

./: CMakeLists.txt
hydro-solver/: CMakeLists.txt  eos.hpp  main.cpp  material_closure.hpp  mesh_generator.hpp  method.hpp  problem.cpp  problem.hpp  simulation.cpp  simulation.hpp
hydro-solver/eoses/: eos_ideal_gas.hpp  eos_mgal_precise6.cpp  eos_mgal_precise6.hpp
hydro-solver/material_closures/: al_vac_closure.hpp
hydro-solver/mesh_generators/: uniform_mesh_generator.hpp
hydro-solver/methods/: lagrangian_fem_method.cpp  lagrangian_fem_method.hpp
hydro-solver/utils/: basis.cpp  basis.hpp  legendre_nodes.cpp  legendre_nodes.hpp  legendre_weights.cpp  legendre_weights.hpp  lobatto_nodes.cpp  lobatto_nodes.hpp
